tests/compile/schema_types.stderr
error[E0277]: the trait bound `bool: rust_query::ValidInSchema<v0::Schema>` is not satisfied
 --> tests/compile/schema_types.rs:6:18
  |
6 |         my_bool: bool,
  |                  ^^^^ the trait `rust_query::Table` is not implemented for `bool`, which is required by `bool: rust_query::ValidInSchema<v0::Schema>`
  |
  = help: the following other types implement trait `rust_query::Table`:
            rust_query::pragma::ForeignKeyList
            rust_query::pragma::IndexInfo
            rust_query::pragma::IndexList
            rust_query::pragma::TableInfo
            rust_query::pragma::TableList
            v0::Table
  = note: required for `bool` to implement `rust_query::ValidInSchema<v0::Schema>`
note: required by a bound in `valid_in_schema`
 --> src/lib.rs
  |
  | pub fn valid_in_schema<S, T: ValidInSchema<S>>() {}
  |                              ^^^^^^^^^^^^^^^^ required by this bound in `valid_in_schema`

error[E0277]: the trait bound `Option<Option<i64>>: rust_query::ValidInSchema<v0::Schema>` is not satisfied
 --> tests/compile/schema_types.rs:7:17
  |
7 |         nested: Option<Option<i64>>,
  |                 ^^^^^^^^^^^^^^^^^^^ the trait `rust_query::ValidInSchema<v0::Schema>` is not implemented for `Option<Option<i64>>`
  |
  = help: the trait `rust_query::ValidInSchema<S>` is implemented for `Option<T>`
note: required by a bound in `valid_in_schema`
 --> src/lib.rs
  |
  | pub fn valid_in_schema<S, T: ValidInSchema<S>>() {}
  |                              ^^^^^^^^^^^^^^^^ required by this bound in `valid_in_schema`
